# aubio-ledfx

./: .gitignore  DEFENSIVE_PROGRAMMING.md  FUTURE_ACTIONS.md  IMPLEMENTATION_PLAN.md  ISSUE_433_SUMMARY.md  MANIFEST.in  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_VISUAL.md  README.md  SANITIZERS.md  SECURITY_HARDENING.md  SECURITY_REVIEW.md  SECURITY_STRENGTHENING_SUMMARY.md  VERSION  meson-vcpkg.txt  meson.build  meson_options.txt  pyproject.toml  setup.py  vcpkg.json
.github/: COPILOT_SETUP_README.md  copilot-instructions.md
.github/workflows/: build.yml  sanitizers.yml
SECURITY/: DEFENSIVE_PROGRAMMING.md  HARDENING.md  README.md  REVIEW.md  SANITIZERS.md  STRENGTHENING_SUMMARY.md
ci/: manylinux_2_28_aarch64-vcpkg-aubio.Dockerfile  manylinux_2_28_x86_64-vcpkg-aubio.Dockerfile
doc/: meson_reference.rst  vcpkg_integration.md
examples/: meson.build
python/: README.md  meson.build
python/lib/: gen_external.py
src/: aubio_priv.h  cvec.c  fmat.c  fvec.c  lvec.c  mathutils.c  mathutils.h  meson.build
src/effects/: rubberband_utils.c
src/pitch/: pitchschmitt.c
src/temporal/: filter.c
src/utils/: strutils.c
tests/: meson.build
tests/src/: test-mathutils.c  test-security-assertions.c
tests/src/spectral/: test-specdesc.c
vcpkg-triplets/: arm64-linux-pic.cmake  x64-linux-pic.cmake
